<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:weightSum="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_title"
            android:id="@+id/gameTitle"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:gravity="center" />

        <ImageView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:id="@+id/birdImage"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:contentDescription="@string/parrot_accessibility"
            android:src="@drawable/parrot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/player_1_name"
            android:id="@+id/player1Text"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player1Name"
            android:layout_marginBottom="5dp"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/player_2_name"
            android:id="@+id/player2Text"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player2Name"
            android:layout_marginBottom="5dp"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:id="@+id/startGame"
            android:onClick="onStartGame"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_instructions"
            android:id="@+id/viewInstructions"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:onClick="onViewInstructions" />
    </LinearLayout>

</LinearLayout>
